[Core] CSRF token name is now configurable

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -21,6 +21,7 @@ services:
             - "@security.csrf.token_manager"
             - "@session"
             - "%kernel.root_dir%"
+            - "%contao.csrf_token_name%"
         calls:
             - [setContainer, ["@service_container"]]
         tags:
